fix scrollbar

--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -42,11 +42,15 @@
 }
 
 .question {
-  width: 80%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .question-header {
   width: 100%;
+  max-width: 640px;
   display: flex;
   flex-direction: row;
   align-items: center;
